Time: 1 ms (26.02%) | Memory: 42.3 MB (78.26%) - LeetSync